color and text changes to homepage

--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,16 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="The official website for the Brooklyn College Computer Science Club."
+      content="The official website for Political Computer Science @ Berkeley."
     />
 
     <!-- Open Graph Tags -->
     <meta
       property="og:title"
-      content="Brooklyn College Computer Science Club"
+      content="Political Computer Science @ Berkeley"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://bccompsci.club" />
+    <meta property="og:url" content="https://pcs.berkeley.edu" />
     <meta property="og:image" content="https://bccompsci.club/inspiration.jpg" />
 
 
@@ -39,8 +39,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      Brooklyn College Computer Science Club | Brooklyn College's Premier
-      Computer Science Community
+      Political Computer Science at UC Berkeley
     </title>
 
     <!-- IE11 Custom Properties Polyfill -->
